[project]
name = "tc-bombshelter"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksym Zayats",email = "zmr2k17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=1.4.0,<3)",
    "streamlit (>=1.53.1,<2.0.0)",
    "ckanapi (>=4.9,<5.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jupyterlab (>=4.5.3,<5.0.0)",
    "requests-cache (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
